Finalizando metodologia e considerações finais.

--- a/proposta_2.tex
+++ b/proposta_2.tex
@@ -3,6 +3,7 @@
 \usepackage{cite}
 \usepackage[brazilian]{babel}
 
+
 \begin{document}
 
 \section{INTRODUÇÃO}
@@ -29,9 +30,42 @@ Fazer um análise sistemática sobre mineração de dados, visando identificar aspec
 Obter maior conhecimento na área de mineração de dados, visando a tendencia do mercado de descoberta de valores, resumindo-as em informações úteis sobre os padrões e tendências históricas futuras.
 
 \subsection{Justificativa}
-Considerando Data Mining um conjunto de busca padronizada de dados e subconjunto de dados, nos é pressuposto um desafio correlacionado as técnicas de utilização de mineração e busca de dados valiosos, que efetivem uma aplicação consistente sobre os valores refinados. Segundo \cite{Amo} há uma necessidade de busca de conhecimento para definir qual técnica de mineração é mais adequada para descobrimento de padrões que nos interessam. Dentre as principais técnicas de mineração de dados, temos técnicas estatísticas, técnicas de aprendizado de máquina e técnicas baseadas em {\it crescimento-poda-validação} 
+Considerando Data Mining um conjunto de busca padronizada de dados e subconjunto de dados, nos é pressuposto um desafio correlacionado as técnicas de utilização de mineração e busca de dados valiosos, que efetivem uma aplicação consistente sobre os valores refinados. Segundo \cite{Amo} há uma necessidade de busca de conhecimento para definir qual técnica de mineração é mais adequada para descobrimento de padrões que nos interessam. Dentre as principais técnicas de mineração de dados, temos técnicas estatísticas, técnicas de aprendizado de máquina e técnicas baseadas em {\it crescimento-poda-validação}.\newpage 
 
 
+\section{PROCEDIMENTOS METODOLÓGICOS}
+\subsection{Referencial Teórico}
+Mineração de dados é o processo de análise de dados a partir de diferentes ângulos objetivando transparência das informações de interesse coletadas. Portanto nas etapas de extração de informações, são utilizadas técnicas e algoritmos de diferentes áreas de pesquisa, principalmente inteligência computacional (aprendizagem de máquina), banco de dados (recursos para manipular grandes bases de dados). Segundo  \cite{Silva:2009}(Fayyad, 1996), o padrão tradicional para modificação dos dados em informações, consiste em um processamento manual de todas as informações por especialista que, então, produzirá relatórios que serão analisados. Em grande escala esse tipo de situações de processo manual torna-se inviável devido ao grande volume de dados.\\ De acordo com \cite{Strictu:2004} Data Mining é apenas uma etapa do processo KDD ({\it Knowledge Discovery in Databases}) e consiste de algoritmos que produzem uma competência computacional aceitável. Para \cite{Fayyad:1996} os principais métodos de mineração de dados são: árvore de decisão, regras, regressão não-linear, classificação, dependência gráfica probabilística e aprendizagem relacional. Esse métodos podem ser aplicados em diversas funções, tais como: classificação de dados aprendizado de função de mapeamento de dados segundo atributos comuns, sumarização, modelagem de dependências e detecção de desvios de mudança.\\ Conforme \cite{Fayyad:1996} o processo de KDD é interativo e iterativo, englobando variadas tomadas de decisões. Para o autor são propostos nove (9) processos a serem seguidos:
+\begin{itemize}
+\item desenvolvimento de um entendimento do domínio da aplicação.
+\item criação de um conjunto de objetivos.
+\item limpeza de processamento de dados.
+\item redução e emissão de dados.
+\item seleção do objetivo da Data Mining.
+\item seleção do algoritmo de Mineração de Dados.
+\item aplicação da Mineração de Dados.
+\item análise dos padrões minerados.
+\item estabilidade do processo descoberto.\\
+\end{itemize}
+De acordo \cite{Strictu:2004}, Hirji(2001) as três principais classes de problemas nos quais algoritmos de mineração de dados podem ser aplicados são:
+\begin{itemize}
+\item conjunto para separação de dados com características equivalente.
+\item descoberta de arquétipo sequenciais ou associações para instaurar afinidades ocultas e,
+\item modelagem preditiva, onde se busca a alternativa de dados e modelagem para previsão de espaço central.
+\end{itemize}
+
+
+\subsection{Metodologia}
+Os procedimentos metodológicos são essenciais para que um estudo científico consiga bons resultados. Na realidade, a metodologia proporciona instrumentos que facilitam a obtenção de dados que, evidentemente, darão veracidade à pesquisa e a seus resultados.
+
+\subsubsection{Tipo de Estudo} 
+A presente pesquisa será de caráter quantitativo, onde será efetivado o estudo sobre algumas ferramentas de auxilio a mineração de dados.
+
+\subsubsection{Ferramenta de Consulta e Técnica de Estatística}
+A primeira instancia de um projeto de Mineração de Dados é feito uma analise simples do conjunto de dados que será minerado. Antes de serem aplicados algoritmos de reconhecimento de padrão, é preciso conhecer os aspectos e as estruturas do conjunto de dados que serão minerados. Estatísticas como média aritmética, desvio padrão, valores máximos e mínimos e distribuição percentual de todo o conjunto de dados representam os passo iniciais num processo de mineração de dados. 
+
+
+\newpage
 
 %Segundo \cite{Pacheco:2003}(Berry e Linoff, 1997, p. 5), a mineração de dados pode ser entendida como a exploração e análise de grandes quantidades de dados, de maneira automática ou semi-automática, com o objetivo de descobrir padrões e regras relevantes.%
 %A pesquisa proporciona a possibilidade de um analise crítico. \cite{Silva:2009}%
@@ -40,7 +74,7 @@ Considerando Data Mining um conjunto de busca padronizada de dados e subconjunto
 
 
 
-\bibliographystyle{plain}
+\bibliographystyle{apalike}
 \bibliography{referencia}
 
 
