--- a/referencia.bib
+++ b/referencia.bib
@@ -1,5 +1,5 @@
 @article{Silva:2009,
-author = {da Silva, C\'{a}asio O. Camilo Jo\~{a}o C.},
+author = {da Silva, C\'{a}ssio O. Camilo Jo\~{a}o C.},
 file = {:C$\backslash$:/Users/marcosj/Desktop/minera\c{c}\~{a}o de dados/RT-INF\_001-09.pdf:pdf},
 title = {{Minera\c{c}\~{a}o de Dados : Conceitos , Tarefas , M\'{e}todos e Ferramentas}},
 year = {2009}
@@ -70,4 +70,19 @@ year = {2003}
 author = {Amo, Sandra De},
 file = {:C$\backslash$:/Users/marcosj/Desktop/JAI-cap5.pdf:pdf},
 title = {{T\'{e}cnicas de Minera\c{c}\~{a}o de Dados}}
+}
+
+@article{Fayyad:1996,
+author = {Fayyad, Usama and Piatetsky-shapiro, Gregory and Smyth, Padhraic},
+file = {:C$\backslash$:/Users/marcosj/Desktop/aimag-kdd-overview-1996-Fayyad.pdf:pdf},
+pages = {37--54},
+title = {{From Data Mining to Knowledge Discovery in}},
+year = {1996}
+}
+
+@article{Moresi:2003,
+author = {Eduardo Moresi,Organizador, Bras\'{\i}lia},
+file = {:C$\backslash$:/Users/marcosj/Desktop/MetodologiaPesquisa-Moresi2003.pdf:pdf},
+title = {{Metodologia da Pesquisa}},
+year = {2003}
 }
