Em fase de conclusão. Faltando resumo, conclusão.

--- a/proposta_2.tex
+++ b/proposta_2.tex
@@ -5,7 +5,50 @@
 
 
 \begin{document}
+%%%%%%%%%%%%%%%%%%%%%%%%___________Capa____________%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\begin{titlepage}
+ 
+ \begin{center}
+   {\normalsize {\bf \ \ \ \ \ \ \ FACULDADE CATÓLICA DO TOCANTINS \newline
+   CURSO DE SISTEMAS DE INFORMAÇÃO}} \\[3cm]
+   {\normalsize Marcos Roberto Solino de Souza Junior} \\[3cm]
+   {\normalsize {\bf MINERAÇÃO DE DADOS - TÉCNICAS E ABORDAGENS}} \\[3cm]
+   
+   %%%%%%%%%%%%%%%%%%%%% TEXTO CENTRALIZADO À DIREITA %%%%%%%%%%%%%%%%%%%%%%
+   
+   \begin{flushright}
+   \begin{minipage}{0.5\textwidth}      
+   {\normalsize Projeto apresentado como requisito parcial para aprovação na disciplina de Estágio Supervisionado I do Curso de Sistemas de Informação, da Faculdade Católica do Tocantins (FACTO), sob a orientação do(a) professor(a)M.Sc. Marcos Antônio Firmino de Souza.} \\[3cm]
+   \end{minipage}   
+   \end{flushright}
+   
+   
+   \vfill
+   {\normalsize Palmas - TO} \\
+   {\normalsize 2013}
+ \end{center}
+\end{titlepage}
+
+\thispagestyle{empty}%REMOVE O NUMERO DE PAGINA%
+
+\begin{flushleft}
+\begin{titlepage}
+{\bf{\normalsize Aluno:}}\linebreak Nome:\hspace{6cm} Matricula:\linebreak Período:\linebreak Endereço:\hspace{5.4cm} N°:\linebreak Bairro:\hspace{5,9cm} Cidade:\hspace{2cm} Estado:\linebreak CEP:\hspace{6.25cm} Telefone: \linebreak \linebreak {\bf{\normalsize Empresa:}}\linebreak Endereço:\hspace{5.4cm} N°:\linebreak Bairro:\hspace{5,9cm} Cidade:\hspace{2cm} Estado:\linebreak CEP:\hspace{6.25cm} Telefone:\linebreak Supervisor: \linebreak Formação do Supervisor: \linebreak Cargo: \linebreak Dep./Div./Setor: \linebreak Telefone(s) / Ramal(is): \linebreak \linebreak {\bf{\normalsize INFORMAÇÕES ACADÊMICAS:}} \linebreak Professor Orientador: \linebreak Início do Estágio:\hspace{4cm} Término do Estágio: \linebreak Total de horas semanais dedicada ao estágio supervisionado: \linebreak Área de realização de estágio: \linebreak \linebreak  \begin{center}
+\normalsize Data:\rule{0.9cm}{0.2pt}/\rule{0.9cm}{0.2pt}/\rule{0.9cm}{0.2pt} \rule{6cm}{0.2pt}\linebreak Assinatura do Aluno \linebreak \linebreak
+\end{center}
+{\bf{\normalsize ACEITE DO ORIENTADOR:}} \linebreak Observações:
+\begin{center}
+\normalsize Data:\rule{0.9cm}{0.2pt}/\rule{0.9cm}{0.2pt}/\rule{0.9cm}{0.2pt} \rule{6cm}{0.2pt}\linebreak Assinatura do Orientador \linebreak \linebreak
+\end{center}
+\end{titlepage}
+\end{flushleft}
+\newpage
+\tableofcontents
+
+\thispagestyle{empty}%REMOVE O NUMERO DE PAGINA%
+
+\newpage
 \section{INTRODUÇÃO}
 \subsection{Área de concentração}
 Atualmente o conceito de Mineração de Dados (Data Mining) tem se tornado popular como uma ferramenta de descoberta de informações, que podem re-\ \ velar estrutura de conhecimento, guiar decisões de certeza limitada, porém, a grande maioria ainda não usa adequadamente essa enorme quantidade de dados para tornar-se em informações que possam ser empregados em atividades pessoais, sejam elas de natureza mercantil ou científica.\\
@@ -48,11 +91,11 @@ Mineração de dados é o processo de análise de dados a partir de diferentes ângul
 \item estabilidade do processo descoberto.\\
 \end{itemize}
 De acordo \cite{Strictu:2004}, Hirji(2001) as três principais classes de problemas nos quais algoritmos de mineração de dados podem ser aplicados são:
-\begin{itemize}
+\begin{enumerate}
 \item conjunto para separação de dados com características equivalente.
 \item descoberta de arquétipo sequenciais ou associações para instaurar afinidades ocultas e,
 \item modelagem preditiva, onde se busca a alternativa de dados e modelagem para previsão de espaço central.
-\end{itemize}
+\end{enumerate}
 
 
 \subsection{Metodologia}
@@ -73,6 +116,7 @@ A primeira instancia de um projeto de Mineração de Dados é feito uma analise sim
 
 
 
+\section{Referências Bibliográficas} 
 
 \bibliographystyle{apalike}
 \bibliography{referencia}
