--- a/proposta_2.tex
+++ b/proposta_2.tex
@@ -4,9 +4,28 @@
 \usepackage[brazilian]{babel}
 
 
+
 \begin{document}
 %%%%%%%%%%%%%%%%%%%%%%%%___________Capa____________%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\begin{titlepage}
+%\begin{center}
+%{\large {\bf FACULDADE CATÓLICA DO TOCANTINS \newline
+%CURSO DE SISTEMAS DE INFORMAÇÃO}}
+%\newline
+%\newline
+%\newline
+%\newline
+%\newline
+%\newline
+%\newline
+%{\large Marcos Roberto Solino de Souza Junior} \\[5cm]
+%{\Huge MINERAÇÃO DE DADOS} \\[10cm]
 
+
+
+%\end{center}
+%\end{titlepage}
+%\newpage
 \begin{titlepage}
  
  \begin{center}
@@ -107,16 +126,45 @@ A presente pesquisa será de caráter quantitativo, onde será efetivado o estudo s
 \subsubsection{Ferramenta de Consulta e Técnica de Estatística}
 A primeira instancia de um projeto de Mineração de Dados é feito uma analise simples do conjunto de dados que será minerado. Antes de serem aplicados algoritmos de reconhecimento de padrão, é preciso conhecer os aspectos e as estruturas do conjunto de dados que serão minerados. Estatísticas como média aritmética, desvio padrão, valores máximos e mínimos e distribuição percentual de todo o conjunto de dados representam os passo iniciais num processo de mineração de dados. 
 
+\subsection{Cronograma}
+%CRINADO UMA TABLE DE CRONOGRAMA%
+
+\large
+\begin{tabular}{|c|c|}\hline
+{\bf Agosto\hspace{2cm} }& \bf{Atividades\hspace{6cm}} \\ \hline 
+03\hspace{2cm} & \hspace{6cm} \\ \hline
+10\hspace{2cm} & \hspace{6cm} \\ \hline 
+17\hspace{2cm} & \hspace{6cm} \\ \hline
+24\hspace{2cm} & \hspace{6cm} \\ \hline
+31\hspace{2cm} & \hspace{6cm} \\ \hline
+{\bf Setembro\hspace{2cm} }& \bf{Atividades\hspace{6cm}} \\ \hline
+07\hspace{2cm} & \hspace{6cm} \\ \hline
+14\hspace{2cm} & \hspace{6cm} \\ \hline 
+21\hspace{2cm} & \hspace{6cm} \\ \hline
+28\hspace{2cm} & \hspace{6cm} \\ \hline
+{\bf Outubro\hspace{2cm} }& \bf{Atividades\hspace{6cm}} \\ \hline
+05\hspace{2cm} & \hspace{6cm} \\ \hline
+12\hspace{2cm} & \hspace{6cm} \\ \hline 
+19\hspace{2cm} & \hspace{6cm} \\ \hline
+26\hspace{2cm} & \hspace{6cm} \\ \hline
+{\bf Novembro\hspace{2cm} }& \bf{Atividades\hspace{6cm}} \\ \hline
+02\hspace{2cm} & \hspace{6cm} \\ \hline
+09\hspace{2cm} & \hspace{6cm} \\ \hline 
+16\hspace{2cm} & \hspace{6cm} \\ \hline
+23\hspace{2cm} & \hspace{6cm} \\ \hline
+30\hspace{2cm} & \hspace{6cm} \\ \hline
+{\bf Dezembro\hspace{2cm} }& \bf{Atividades\hspace{6cm}} \\ \hline
+07\hspace{2cm} & \hspace{6cm} \\ \hline
+14\hspace{2cm} & \hspace{6cm} \\ \hline 
+\end{tabular}
+\linebreak
+\section{CONSIDERAÇÕES FINAIS}
+O conceito de mineração de dados surgiu com o objetivo de dar suporte à tomada de decisões nas organizações. Consequentemente, o emprego de técnicas de mineração de dados nos sistemas de exploração de conhecimento em banco de dados, nos trará como resultado regras e padrões em dados pré estabelecidos no ato da mineração, que por sua vez designará conhecimento suficiente e adequado para os responsáveis nas tomadas de decisões nas empresas.
+
 
 \newpage
 
-%Segundo \cite{Pacheco:2003}(Berry e Linoff, 1997, p. 5), a mineração de dados pode ser entendida como a exploração e análise de grandes quantidades de dados, de maneira automática ou semi-automática, com o objetivo de descobrir padrões e regras relevantes.%
-%A pesquisa proporciona a possibilidade de um analise crítico. \cite{Silva:2009}%
-
-
-
-
-\section{Referências Bibliográficas} 
+\section{REFERÊNCIAS BIBLIOGRÁFICAS} 
 
 \bibliographystyle{apalike}
 \bibliography{referencia}
