--- a/proposta_2.tex
+++ b/proposta_2.tex
@@ -69,11 +69,14 @@
 
 \newpage
 \section{INTRODUÇÃO}
+Deve ter um texto de abertura da seção aqui.
+
 \subsection{Área de concentração}
 Atualmente o conceito de Mineração de Dados (Data Mining) tem se tornado popular como uma ferramenta de descoberta de informações, que podem re-\ \ velar estrutura de conhecimento, guiar decisões de certeza limitada, porém, a grande maioria ainda não usa adequadamente essa enorme quantidade de dados para tornar-se em informações que possam ser empregados em atividades pessoais, sejam elas de natureza mercantil ou científica.\\
 No entanto, mineração de dados é um processo de busca de conhecimento que tenha um grau de importância elevado em grandes bancos de dados, ou seja, é um método altamente colaborativo entre o ser humana e a máquina, que tende a reconhecimento de amplos bancos de dados, com finalidade de abduzir conhecimento através do reconhecimento de padrões e ligações entre variáveis.
 
 \subsection{Objetivos}
+Deve ter um texto de abertura da seção aqui.
 \subsubsection{Objetivos Geral}
 
 Fazer um análise sistemática sobre mineração de dados, visando identificar aspectos atuais do método de extração de informação. 
@@ -96,6 +99,7 @@ Considerando Data Mining um conjunto de busca padronizada de dados e subconjunto
 
 
 \section{PROCEDIMENTOS METODOLÓGICOS}
+Deve ter um texto de abertura da seção aqui.
 \subsection{Referencial Teórico}
 Mineração de dados é o processo de análise de dados a partir de diferentes ângulos objetivando transparência das informações de interesse coletadas. Portanto nas etapas de extração de informações, são utilizadas técnicas e algoritmos de diferentes áreas de pesquisa, principalmente inteligência computacional (aprendizagem de máquina), banco de dados (recursos para manipular grandes bases de dados). Segundo  \cite{Silva:2009}(Fayyad, 1996), o padrão tradicional para modificação dos dados em informações, consiste em um processamento manual de todas as informações por especialista que, então, produzirá relatórios que serão analisados. Em grande escala esse tipo de situações de processo manual torna-se inviável devido ao grande volume de dados.\\ De acordo com \cite{Strictu:2004} Data Mining é apenas uma etapa do processo KDD ({\it Knowledge Discovery in Databases}) e consiste de algoritmos que produzem uma competência computacional aceitável. Para \cite{Fayyad:1996} os principais métodos de mineração de dados são: árvore de decisão, regras, regressão não-linear, classificação, dependência gráfica probabilística e aprendizagem relacional. Esse métodos podem ser aplicados em diversas funções, tais como: classificação de dados aprendizado de função de mapeamento de dados segundo atributos comuns, sumarização, modelagem de dependências e detecção de desvios de mudança.\\ Conforme \cite{Fayyad:1996} o processo de KDD é interativo e iterativo, englobando variadas tomadas de decisões. Para o autor são propostos nove (9) processos a serem seguidos:
 \begin{itemize}
@@ -158,6 +162,7 @@ A primeira instancia de um projeto de Mineração de Dados é feito uma analise sim
 14\hspace{2cm} & \hspace{6cm} \\ \hline 
 \end{tabular}
 \linebreak
+
 \section{CONSIDERAÇÕES FINAIS}
 O conceito de mineração de dados surgiu com o objetivo de dar suporte à tomada de decisões nas organizações. Consequentemente, o emprego de técnicas de mineração de dados nos sistemas de exploração de conhecimento em banco de dados, nos trará como resultado regras e padrões em dados pré estabelecidos no ato da mineração, que por sua vez designará conhecimento suficiente e adequado para os responsáveis nas tomadas de decisões nas empresas.
 
